<resources>
    <string name="empty_string"/>
    <string name="app_name">微博读书</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="knowed">朕知道了</string>
    <string name="iknowed">我知道了</string>
    <string name="comment_num">300</string>
    <string name="splash_txt">微博读书  版权所有\nCopyright 2014–2016 SINA Corp, All Rights Reserved</string>
    <string name="delete">删除</string>
    <string name="sync_loading">研发哥为您，努力同步中…</string>
    <string name="network_error">网络不给力，稍后再试试吧</string>
    <string name="data_error">数据异常，请稍后重试吧</string>
    <string name="network_pro">网络不给力呀，检查后重试吧</string>
    <string name="note">提示</string>
    <string name="note_info">确认要删除《%1$s》吗?</string>
    <string name="sd_smallsize">SD卡剩余空间不足</string>
    <string name="no_sdcard">SD卡已拔出</string>
    <string name="add_shelves_down">已成功加入书架</string>
    <string name="recommend_author">热门作家</string>
    <string name="recommend_hot">编辑推荐</string>
    <string name="recommend_today_free">今日限免</string>
    <string name="recommend_boy_favourite">男生爱看</string>
    <string name="recommend_girl_favourite">女生爱看</string>
    <string name="recommend_star_author">人气作者</string>
    <string name="recommend_epub">图文精装作品</string>
    <string name="recommend_famous">名人推荐</string>
    <string name="recommend_classic">热门分类</string>
    <string name="recommend_new">选你喜欢</string>
    <string name="recommend_free">免费试读</string>
    <string name="recommend_cmread">和阅读专区</string>
    <string name="recommend_month">包月畅读</string>
    <string name="recomond">推荐</string>
    <string name="recomond_title">精选推荐</string>
    <string name="rank">排行</string>
    <string name="partition">分类浏览</string>
    <string name="wrong_url">链接错误,请重试</string>
    <string name="latest">最新</string>
    <string name="free">免费</string>
    <string name="retry">重试</string>
    <string name="net_set">网络设置</string>
    <string name="back">返回</string>
    <string name="show_more">查看全部&amp;gt;&amp;gt;</string>
    <string name="search_data_null">没有该书，试试其他精彩书籍吧~~</string>
    <string name="empty_text">这里空空如也哟~~</string>
    <string name="search_hint">请输入书名或作者名…</string>
    <string name="recommend_more">查看更多&amp;gt;</string>
    <string name="recommend_famous_des">为您推荐</string>
    <string name="recommend_month_num">(%s本)</string>
    <string name="recommend_month_price">￥%1$d元/月</string>
    <string name="recommend_month_new">最新入库：</string>
    <string name="recommend_book_count">共%d本</string>
    <string name="recommend_author_count">共%d人</string>
    <string name="all_recommend">查看全部</string>
    <string name="look_more">查看更多</string>
    <string name="search">发现</string>
    <string name="search_key_null">请输入搜索关键字</string>
    <string name="hot_search">热门搜索</string>
    <string name="hot_words">热词</string>
    <string name="hot_words_search">搜索热词</string>
    <string name="hot_words_more">更多热词</string>
    <string name="search_author">作者：%1$s</string>
    <string name="search_new">最新：</string>
    <string name="search_all">总共：</string>
    <string name="search_see_all">查看全部</string>
    <string name="search_tag">标签：%s</string>
    <string name="search_one">1</string>
    <string name="author">作者：</string>
    <string name="state">状态：</string>
    <string name="book_chapter_num">总数：%d章节</string>
    <string name="book_price">价格：</string>
    <string name="download">下载</string>
    <string name="cloud_collect">加入书架</string>
    <string name="book_info">书籍简介</string>
    <string name="book_no_info">该书暂无简介</string>
    <string name="comments">评论</string>
    <string name="show_all">展开全部</string>
    <string name="hide">收起</string>
    <string name="free_read">在线试读</string>
    <string name="read">阅读</string>
    <string name="download_read">下载阅读</string>
    <string name="download_loading">下载中...</string>
    <string name="free_buy_down">立即下载</string>
    <string name="free_down">立即下载</string>
    <string name="has_down">已下载</string>
    <string name="downloading_txt">下载中</string>
    <string name="book_detail">书籍详情</string>
    <string name="share_to">分享到</string>
    <string name="share_weibo">分享至微博</string>
    <string name="has_collected">已加入书架</string>
    <string name="book_detail_praise_text">我要推荐</string>
    <string name="book_detail_comment_text">我要评论</string>
    <string name="book_detail_author_book">%s的书</string>
    <string name="book_detail_person_book">喜欢本书的人还喜欢</string>
    <string name="book_detail_related_keyword">关联标签</string>
    <string name="book_detail_has_praised">已推荐</string>
    <string name="book_detail_see_all_comment">查看全部评论&amp;gt;&amp;gt;</string>
    <string name="book_detail_catalog">目录</string>
    <string name="book_detail_new_chapter">最新章节：</string>
    <string name="book_detail_update_time">更新时间：%s</string>
    <string name="book_detail_buy">立即购买</string>
    <string name="book_detail_epubbuyanddown">购买并下载</string>
    <string name="book_detail_usefee">立即用券</string>
    <string name="book_detail_free">免费</string>
    <string name="book_simple">本书简介</string>
    <string name="book_cate">类别：</string>
    <string name="book_detail_praising">请稍候...</string>
    <string name="book_detail_has_praised_note">您已推荐过本书了</string>
    <string name="book_detail_has_forbidden">对不起，此书已经下架了</string>
    <string name="reading_book_not_exist">书本不存在，请检查SD卡</string>
    <string name="downloading_waiting">下载未完成，请稍候</string>
    <string name="reading_opening">正在打开…</string>
    <string name="reading_pay_continue_text">继续阅读</string>
    <string name="reading_complete_book">您已阅读到了最后一页</string>
    <string name="reading_complete_book_all">您已阅读完本书啦</string>
    <string name="reading_complete_chapter">试读章节读完啦</string>
    <string name="reading_subscription_checkbox">订阅更新提醒</string>
    <string name="parise_success">\"推荐\"成功</string>
    <string name="reading_shareweibo_hint_text">说点什么吧</string>
    <string name="reading_shareweibo_num">140</string>
    <string name="reading_shareweibo_clean">清除文字？</string>
    <string name="max_num_tips">超过微博字数限制</string>
    <string name="reading_page_local">第%1$s页/总%2$s页</string>
    <string name="reading_page_online">本章第%1$s页/共%2$s页</string>
    <string name="reading_page_parsing">解析中…</string>
    <string name="book_dir">目录</string>
    <string name="book_dir_group_tag">第%1$s~%2$s章</string>
    <string name="book_tag">书签</string>
    <string name="book_summary">书摘</string>
    <string name="book_tag_function">功能</string>
    <string name="add_shelves_tip">把《%1$s》添加到书架，才能保存你的阅读进度和书签哦～～～</string>
    <string name="add_shelves_tip1">把《%1$s》添加到书架，</string>
    <string name="add_shelves_tip2">才能保存你的阅读进度和书签哦～～～</string>
    <string name="import_tip">将《%1$s》导入书架</string>
    <string name="add_shelves_ok">好的</string>
    <string name="add_shelves_cancle">不用</string>
    <string name="create_share_content">正在准备分享内容…</string>
    <string name="create_share_content_failed">获取分享内容失败</string>
    <string name="downloading_text">正在下载…</string>
    <string name="downloading_failed">下载失败</string>
    <string name="downloading_failed_text">下载失败，请重试</string>
    <string name="bookdetail_failed_text">作品信息有误</string>
    <string name="chapter_format">第%1$s章</string>
    <string name="date_format">%1$s月%2$s日</string>
    <string name="clear_all_mark">清除所有书签</string>
    <string name="clear_all_mark_tip">您确认清除本书所有书签吗？</string>
    <string name="clear_all_summary">清除所有书摘</string>
    <string name="clear_all_summary_tip">您确认清除本书所有书摘吗？</string>
    <string name="no_mark">书签不存在</string>
    <string name="first_page_alert">已经是第一页</string>
    <string name="last_page_alert">已经是最后一页</string>
    <string name="chapter_is_null">指定章节不存在</string>
    <string name="add_mark_succ">添加书签成功</string>
    <string name="add_mark_failed">添加书签失败</string>
    <string name="add_mark_not">已阅读到结尾，没有文本添加书签</string>
    <string name="delete_mark_succ">删除书签成功</string>
    <string name="pulldown_tv_add_normal">下拉添加书签</string>
    <string name="pulldown_tv_add_ready">松开手指添加书签</string>
    <string name="pulldown_tv_del_normal">下拉删除书签</string>
    <string name="pulldown_tv_del_ready">松开手指删除书签</string>
    <string name="payment_month_pretip"> 该书为%1$s包月书籍\n</string>
    <string name="payment_month_nologin">请先登录您的新浪帐号，同步包月信息</string>
    <string name="payment_month_already">请先联网同步您的包月信息！</string>
    <string name="has_not_mark_text">您还没有添加书签哟！\n在阅读的时候下拉屏幕即可方便的添加书签 :)</string>
    <string name="has_not_summary_text">您还没有添加书摘哟！\n在阅读的时候长按并选中文字即可添加书摘 :)</string>
    <string name="share_summary">#微博读书书摘#%1$s#%2$s#</string>
    <string name="share_summary_vdisk">#微博读书书摘#%1$s#%2$s#%3$s (来源@微盘)</string>
    <string name="share_book">#微博读书客户端#%1$s#%2$s#</string>
    <string name="share_book_vdisk">#微博读书客户端#我分享了#%1$s#%2$s (来源@微盘)</string>
    <string name="share_comment">#微博读书客户端#%1$s#%2$s#</string>
    <string name="url_down_app">http://m.sina.com.cn/m/sinabook.shtml</string>
    <string name="text_selector_summary">书摘</string>
    <string name="text_selector_share">分享</string>
    <string name="text_selector_copy">复制</string>
    <string name="copy_to_clipboard">已复制到剪贴板</string>
    <string name="add_summary_succ">添加书摘成功</string>
    <string name="no_summary">书摘不存在</string>
    <string name="add_summary_failed">添加书摘失败</string>
    <string name="vip_chapter_selector_note">VIP章节不能进行书摘、分享、复制操作</string>
    <string name="exit_content">确定要退出微博读书？</string>
    <string name="toolbar_progress">进度</string>
    <string name="toolbar_bright">白天</string>
    <string name="toolbar_night">夜间</string>
    <string name="toolbar_setting">设置</string>
    <string name="toolbar_comment">点评</string>
    <string name="setting_page_anim">翻页动画</string>
    <string name="setting_page_material">书页材质</string>
    <string name="setting_brightness_auto">系统亮度</string>
    <string name="setting_anima_flip">仿真</string>
    <string name="setting_anima_slide">左右</string>
    <string name="setting_anima_scroll">上下</string>
    <string name="setting_update_note">有新章节通知我</string>
    <string name="comment">评论</string>
    <string name="praise">推荐</string>
    <string name="has_praised">已推荐</string>
    <string name="pre_chapter">前一章</string>
    <string name="next_chapter">后一章</string>
    <string name="chapter_information">第%1$d章 / 共%2$d章</string>
    <string name="first_chapter">已是第一章</string>
    <string name="last_chapter">已是最后一章</string>
    <string name="see_author_info_note">非原创作者，不能查看详情</string>
    <string name="login_txt">登录</string>
    <string name="login_tips">请同时登录新浪微博账号！</string>
    <string name="weibo_auto_share">微博自动转发</string>
    <string name="notification_switch">打开通知栏快捷返回</string>
    <string name="feedback_text">给点意见</string>
    <string name="check_update__txt">检查更新</string>
    <string name="about_txt">关于我们</string>
    <string name="app_recommend">我要评分</string>
    <string name="exit_login">退出登录</string>
    <string name="login_failed">未获取到登录信息，请重新登录</string>
    <string name="sina_reader">微博读书</string>
    <string name="personal_center">个人中心</string>
    <string name="u_role_hint">普通用户</string>
    <string name="account_balance">余额：</string>
    <string name="account_recharge">充值</string>
    <string name="go_account_recharge">前往充值</string>
    <string name="u_bi_name">阅读币</string>
    <string name="u_bi_hint">余额：0.00阅读币</string>
    <string name="balance_info">账户信息</string>
    <string name="personal_setting_text">个性设置</string>
    <string name="main_theme_txt">更换主题</string>
    <string name="comments_hint">说点什么吧</string>
    <string name="recharge_amount_other">其它金额</string>
    <string name="recharge_exchange">一键购买阅读币</string>
    <string name="recharge_contact_phone">客服电话：4000960960</string>
    <string name="recharge_contact_mail">客服邮箱：inpay@vip.sina.com</string>
    <string name="recharge_next">充值</string>
    <string name="pay_enter_tip">1~5000的整数金额</string>
    <string name="select_your_liked">选你喜欢</string>
    <string name="consume_title">消费记录</string>
    <string name="consume_desc">购买、充值记录查询</string>
</resources>