<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="37.33dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/recommend_quick_hot"
        android:layout_width="wrap_content"
        android:layout_height="35.33dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/recommend_tab_0_bg"
        android:gravity="center"
        android:text="@string/recommend_hot"
        android:textColor="#C6C9D2"
        android:textSize="10.67sp" />

    <TextView
        android:id="@+id/recommend_quick_famous"
        android:layout_width="wrap_content"
        android:layout_height="35.33dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/recommend_tab_1_bg"
        android:gravity="center"
        android:text="@string/recommend_famous"
        android:textColor="#C6C9D2"
        android:textSize="10.67sp" />

    <TextView
        android:id="@+id/recommend_quick_cate"
        android:layout_width="wrap_content"
        android:layout_height="35.33dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/recommend_tab_2_bg"
        android:gravity="center"
        android:text="@string/recommend_classic"
        android:textColor="#C6C9D2"
        android:textSize="10.67sp" />

    <TextView
        android:id="@+id/recommend_quick_new"
        android:layout_width="wrap_content"
        android:layout_height="35.33dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/recommend_tab_3_bg"
        android:gravity="center"
        android:text="@string/recommend_new"
        android:textColor="#C6C9D2"
        android:textSize="10.67sp" />

    <TextView
        android:id="@+id/recommend_quick_free"
        android:layout_width="wrap_content"
        android:layout_height="35.33dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/recommend_tab_4_bg"
        android:gravity="center"
        android:text="@string/recommend_free"
        android:textColor="#C6C9D2"
        android:textSize="10.67sp" />

    <TextView
        android:id="@+id/recommend_quick_month"
        android:layout_width="wrap_content"
        android:layout_height="35.33dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/recommend_tab_5_bg"
        android:gravity="center"
        android:text="@string/recommend_month"
        android:textColor="#C6C9D2"
        android:textSize="10.67sp" />
</LinearLayout>
