<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PublicBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:drawableTop="@drawable/error_icon"
        android:text="@string/network_pro"
        android:textColor="#EBCCAA"
        android:textSize="16sp" />
    
    <Button
        android:id="@+id/net_set_btn"
        android:layout_width="@dimen/common_btn_width1"
        android:layout_height="@dimen/common_btn_height"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_btn_bg_red"
        android:gravity="center"
        android:text="@string/net_set"
        android:textColor="@color/white"
        android:textSize="16sp" />
    
    <Button
        android:id="@+id/back_btn"
        android:layout_width="@dimen/common_btn_width1"
        android:layout_height="@dimen/common_btn_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_btn_bg_red"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>