<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PublicCardBg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/recharge_amount_other"
        android:textColor="#BEB4A3"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37.33dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/recharge_edit"
            android:layout_width="match_parent"
            android:layout_height="37.33dp"
            android:layout_weight="1"
            android:background="@drawable/recharge_edit"
            android:gravity="center_vertical"
            android:hint="@string/pay_enter_tip"
            android:inputType="number"
            android:paddingLeft="8dp"
            android:paddingRight="5dp"
            android:digits="0123456789"
            android:maxLength="4"
            android:textColor="@color/recharge_edit_font_color"
            android:textColorHint="@color/recharge_edit_hint_color"
            android:textSize="14.67sp" />

        <TextView
            android:id="@+id/recharge_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_btn_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2.67dp"
            android:layout_weight="2"
            android:background="@drawable/selector_btn_bg_red"
            android:gravity="center"
            android:text="@string/recharge_next"
            android:textColor="@color/white"
            android:textSize="14.67sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exchange_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_title_height"
            android:background="@drawable/top"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/card_padding_horizontal"
            android:paddingRight="@dimen/card_padding_horizontal"
            android:text="@string/recharge_exchange"
            android:textColor="@color/recharge_item_top_font_color"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/exchange_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_item_height"
            android:background="@drawable/selector_personal_bottom_bg"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/card_item_bottom_padding"
            android:paddingLeft="@dimen/card_padding_horizontal"
            android:paddingRight="@dimen/card_padding_horizontal" >

            <ImageView
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:contentDescription="@null"
                android:src="@drawable/more_item_arrow" />

            <TextView
                android:id="@+id/exchange_weibi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/right"
                android:gravity="center_vertical"
                android:textColor="@color/personal_item_font_color"
                android:textSize="@dimen/title_person_item" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="46.67dp"
        android:text="@string/recharge_contact_phone"
        android:textColor="@color/recharge_note_font_color"
        android:textSize="13.33sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="13.33dp"
        android:layout_marginTop="8dp"
        android:text="@string/recharge_contact_mail"
        android:textColor="@color/recharge_note_font_color"
        android:textSize="13.33sp" />

</LinearLayout>