<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/card_space" >

    <!-- 索引0：账户信息 -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/card_title_height"
        android:background="@drawable/top"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/card_padding_horizontal"
        android:text="@string/balance_info"
        android:textColor="@color/personal_title_font_color"
        android:textSize="16sp" />

    <!-- 索引1：余额 -->

    <RelativeLayout
        android:id="@+id/recharge_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_item_height"
        android:background="@drawable/selector_personal_middle_bg"
        android:paddingLeft="@dimen/card_padding_horizontal"
        android:paddingRight="@dimen/card_padding_horizontal" >

        <ImageView
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:src="@drawable/more_item_arrow" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/right" >

            <TextView
                android:id="@+id/user_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/u_bi_hint"
                android:textColor="#8E8D8D"
                android:textSize="14.67sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="8dp"
                android:text="@string/go_account_recharge"
                android:textColor="#B7B7B7"
                android:textSize="13.33sp" />
        </RelativeLayout>
    </RelativeLayout>

    <!-- 索引2：动态添加的活动布局 -->

    <LinearLayout
        android:id="@+id/activitys_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:visibility="gone" />

    <!-- 索引3：消费记录 -->

    <RelativeLayout
        android:id="@+id/consume_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_item_height"
        android:background="@drawable/selector_personal_bottom_bg"
        android:paddingBottom="@dimen/card_item_bottom_padding"
        android:paddingLeft="@dimen/card_padding_horizontal"
        android:paddingRight="@dimen/card_padding_horizontal" >

        <ImageView
            android:id="@+id/consume_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:src="@drawable/more_item_arrow" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/consume_right" >

            <TextView
                android:id="@+id/consume_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/consume_title"
                android:textColor="#8E8D8D"
                android:textSize="14.67sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="8dp"
                android:text="@string/consume_desc"
                android:textColor="#B7B7B7"
                android:textSize="13.33sp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>